--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,1 +1,15 @@
+FROM node:14-alpine
 
+EXPOSE 3001
+
+COPY package.json .
+
+COPY package-lock.json .
+
+RUN npm install
+
+COPY . .
+
+ADD ./node_modules.tar.gz .
+
+CMD ["npm", "start"]
